# twitter-scraper-worker

./: .gitignore
node/: Cargo.toml
pallets/worker/: Cargo.toml
pallets/worker/src/: lib.rs  tests.rs
runtime/: Cargo.toml
tools/: package.json  set_twitter_token.ts
