[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug", features = ["wasmtime"] }
sp-core = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-executor = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug", features = ["wasmtime"] }
sc-service = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug", features = ["wasmtime"] }
sp-inherents = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-transaction-pool = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-transaction-pool = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-consensus-aura = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-consensus-aura = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-consensus = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-consensus = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-finality-grandpa = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-finality-grandpa = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-client-api = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-runtime = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.0.0"
sc-rpc = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-api = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-rpc-api = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sp-block-builder = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
sc-basic-authorship = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }
frame-benchmarking-cli = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }

node-template-runtime = { version = "2.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "jake.offchain-debug" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
